--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/popup.css" />
   </head>
   <body>
-    <button id="suggest">Search on Yandex</button>
+    <h1>Search on Yandex</h1>
+    <ul id="links"></ul>
 
     <script src="js/popup.js"></script>
   </body>
